# multilinear_heads

./: CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md
data/: eigenvalues_fstt.vector  eigenvalues_skull.vector  matrix_U_fstt.matrix  matrix_U_skull.matrix  skin.off  skull.off
data/mlm_fits2skin/: w_fstt.scalars  w_skull.scalars
data/mlm_fits2skull/: w_fstt.scalars  w_skull.scalars
doc/: MLMViewer_8cpp.html  MLMViewer_8cpp__incl.map  MLMViewer_8cpp__incl.md5  MLMViewer_8h.html  MLMViewer_8h__dep__incl.map  MLMViewer_8h__dep__incl.md5  MLMViewer_8h__incl.map  MLMViewer_8h__incl.md5  MLMViewer_8h_source.html  MultilinearModel_8cpp.html  MultilinearModel_8cpp__incl.map  MultilinearModel_8cpp__incl.md5  MultilinearModel_8h.html  MultilinearModel_8h__dep__incl.map  MultilinearModel_8h__dep__incl.md5  MultilinearModel_8h__incl.map  MultilinearModel_8h__incl.md5  MultilinearModel_8h_source.html  README_8md.html  annotated.html  classMLMViewer-members.html  classMLMViewer.html  classMLMViewer__coll__graph.map  classMLMViewer__coll__graph.md5  classMLMViewer__inherit__graph.map  classMLMViewer__inherit__graph.md5  classMultilinearModel-members.html  classMultilinearModel.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  (+14 more)
doc/search/: all_2.js  all_3.js  all_6.js  all_7.js  all_a.js  all_b.js  all_d.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
src/: CMakeLists.txt  MLMViewer.cpp  MLMViewer.h  MultilinearModel.cpp  MultilinearModel.h  main.cpp  utils.h
